<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_24_dp"
        android:text="@string/home_txt_welcome"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_current_forecast"
        android:layout_width="@dimen/space_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24_dp"
        android:text="@string/home_btn_current_forecast"
        android:textSize="@dimen/text_16_sp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/txt_title"
        app:layout_constraintEnd_toEndOf="@id/guide_line"
        app:layout_constraintTop_toBottomOf="@id/txt_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cities"
        android:layout_width="@dimen/space_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24_dp"
        android:text="@string/home_btn_cities"
        android:textSize="@dimen/text_16_sp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/txt_title"
        app:layout_constraintEnd_toEndOf="@id/guide_line"
        app:layout_constraintTop_toBottomOf="@id/btn_current_forecast"/>

</androidx.constraintlayout.widget.ConstraintLayout>

