<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/txt_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_24_dp"
        android:text="@string/detail_city_name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8_dp"
        app:layout_constraintStart_toStartOf="@id/txt_name_label"
        app:layout_constraintTop_toBottomOf="@id/txt_name_label"
        tools:text="Bolívar"/>

    <TextView
        android:id="@+id/txt_temperature_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24_dp"
        android:text="@string/detail_current_temperature"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/txt_name_label"
        app:layout_constraintTop_toBottomOf="@id/txt_name_value" />

    <TextView
        android:id="@+id/txt_temperature_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8_dp"
        app:layout_constraintStart_toStartOf="@id/txt_name_label"
        app:layout_constraintTop_toBottomOf="@id/txt_temperature_label"
        tools:text="24°"/>

    <TextView
        android:id="@+id/txt_min_temperature_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24_dp"
        android:text="@string/detail_min_temperature"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/txt_name_label"
        app:layout_constraintTop_toBottomOf="@id/txt_temperature_value" />

    <TextView
        android:id="@+id/txt_min_temperature_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8_dp"
        app:layout_constraintStart_toStartOf="@id/txt_name_label"
        app:layout_constraintTop_toBottomOf="@id/txt_min_temperature_label"
        tools:text="16°"/>

    <TextView
        android:id="@+id/txt_max_temperature_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24_dp"
        android:text="@string/detail_max_temperature"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/txt_name_label"
        app:layout_constraintTop_toBottomOf="@id/txt_min_temperature_value" />

    <TextView
        android:id="@+id/txt_max_temperature_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8_dp"
        app:layout_constraintStart_toStartOf="@id/txt_name_label"
        app:layout_constraintTop_toBottomOf="@id/txt_max_temperature_label"
        tools:text="28°"/>

</androidx.constraintlayout.widget.ConstraintLayout>